tree-sitter-ggsql/test/corpus/basic.txt
================================================================================
Simple point plot with MAPPING
================================================================================

VISUALISE
DRAW point MAPPING x AS x, y AS y

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_list
            (mapping_element
              (explicit_mapping
                value: (mapping_value
                  (column_reference
                    (identifier
                      (bare_identifier))))
                name: (aesthetic_name)))
            (mapping_element
              (explicit_mapping
                value: (mapping_value
                  (column_reference
                    (identifier
                      (bare_identifier))))
                name: (aesthetic_name)))))))))

================================================================================
Global mapping with explicit mappings
================================================================================

VISUALISE date AS x, revenue AS y
DRAW line

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (explicit_mapping
            value: (mapping_value
              (column_reference
                (identifier
                  (bare_identifier))))
            name: (aesthetic_name)))
        (mapping_element
          (explicit_mapping
            value: (mapping_value
              (column_reference
                (identifier
                  (bare_identifier))))
            name: (aesthetic_name)))))
    (viz_clause
      (draw_clause
        (geom_type)))))

================================================================================
Global mapping with implicit mappings
================================================================================

VISUALISE x, y
DRAW point

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))))
    (viz_clause
      (draw_clause
        (geom_type)))))

================================================================================
Wildcard global mapping
================================================================================

VISUALISE *
DRAW point

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (wildcard_mapping))))
    (viz_clause
      (draw_clause
        (geom_type)))))

================================================================================
Mixed explicit and implicit global mapping
================================================================================

VISUALISE x, y, region AS color
DRAW line

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (explicit_mapping
            value: (mapping_value
              (column_reference
                (identifier
                  (bare_identifier))))
            name: (aesthetic_name)))))
    (viz_clause
      (draw_clause
        (geom_type)))))

================================================================================
Multi-layer plot with global mapping
================================================================================

VISUALISE date AS x, value AS y
DRAW line
DRAW point MAPPING 'value' AS color

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (explicit_mapping
            value: (mapping_value
              (column_reference
                (identifier
                  (bare_identifier))))
            name: (aesthetic_name)))
        (mapping_element
          (explicit_mapping
            value: (mapping_value
              (column_reference
                (identifier
                  (bare_identifier))))
            name: (aesthetic_name)))))
    (viz_clause
      (draw_clause
        (geom_type)))
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_list
            (mapping_element
              (explicit_mapping
                value: (mapping_value
                  (literal_value
                    (string)))
                name: (aesthetic_name)))))))))

================================================================================
DRAW with SETTING clause
================================================================================

VISUALISE x, y
DRAW point SETTING opacity => 0.5, size => 3

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))))
    (viz_clause
      (draw_clause
        (geom_type)
        (setting_clause
          (parameter_assignment
            name: (parameter_name
              (identifier
                (bare_identifier)))
            value: (parameter_value
              (number)))
          (parameter_assignment
            name: (parameter_name
              (identifier
                (bare_identifier)))
            value: (parameter_value
              (number))))))))

================================================================================
DRAW with FILTER clause
================================================================================

VISUALISE x, y
DRAW point FILTER x > 10

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))))
    (viz_clause
      (draw_clause
        (geom_type)
        (filter_clause
          (filter_expression
            (filter_token
              (filter_identifier))
            (filter_token)
            (filter_token
              (number))))))))

================================================================================
DRAW with FILTER AND condition
================================================================================

VISUALISE
DRAW point MAPPING x AS x FILTER a > 10 AND b < 20

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_list
            (mapping_element
              (explicit_mapping
                value: (mapping_value
                  (column_reference
                    (identifier
                      (bare_identifier))))
                name: (aesthetic_name)))))
        (filter_clause
          (filter_expression
            (filter_token
              (filter_identifier))
            (filter_token)
            (filter_token
              (number))
            (filter_token)
            (filter_token
              (filter_identifier))
            (filter_token)
            (filter_token
              (number))))))))

================================================================================
DRAW with FILTER OR condition
================================================================================

VISUALISE
DRAW point MAPPING x AS x FILTER a = 1 OR b = 2

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_list
            (mapping_element
              (explicit_mapping
                value: (mapping_value
                  (column_reference
                    (identifier
                      (bare_identifier))))
                name: (aesthetic_name)))))
        (filter_clause
          (filter_expression
            (filter_token
              (filter_identifier))
            (filter_token)
            (filter_token
              (number))
            (filter_token)
            (filter_token
              (filter_identifier))
            (filter_token)
            (filter_token
              (number))))))))

================================================================================
DRAW with all clauses
================================================================================

VISUALISE
DRAW point MAPPING x AS x, y AS y SETTING opacity => 0.5 FILTER year > 2020

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_list
            (mapping_element
              (explicit_mapping
                value: (mapping_value
                  (column_reference
                    (identifier
                      (bare_identifier))))
                name: (aesthetic_name)))
            (mapping_element
              (explicit_mapping
                value: (mapping_value
                  (column_reference
                    (identifier
                      (bare_identifier))))
                name: (aesthetic_name)))))
        (setting_clause
          (parameter_assignment
            name: (parameter_name
              (identifier
                (bare_identifier)))
            value: (parameter_value
              (number))))
        (filter_clause
          (filter_expression
            (filter_token
              (filter_identifier))
            (filter_token)
            (filter_token
              (number))))))))

================================================================================
DRAW with string comparison in FILTER
================================================================================

VISUALISE
DRAW point MAPPING x AS x FILTER region = 'North'

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_list
            (mapping_element
              (explicit_mapping
                value: (mapping_value
                  (column_reference
                    (identifier
                      (bare_identifier))))
                name: (aesthetic_name)))))
        (filter_clause
          (filter_expression
            (filter_token
              (filter_identifier))
            (filter_token)
            (filter_token
              (string))))))))

================================================================================
DRAW geom only (no MAPPING)
================================================================================

VISUALISE x, y
DRAW point

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))))
    (viz_clause
      (draw_clause
        (geom_type)))))

================================================================================
Plot with scales
================================================================================

VISUALISE x, y, group AS color
DRAW point
SCALE CONTINUOUS x FROM [0, 100]
SCALE color TO viridis

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (explicit_mapping
            value: (mapping_value
              (column_reference
                (identifier
                  (bare_identifier))))
            name: (aesthetic_name)))))
    (viz_clause
      (draw_clause
        (geom_type)))
    (viz_clause
      (scale_clause
        (scale_type_identifier)
        (aesthetic_name)
        (scale_from_clause
          (array
            (array_element
              (number))
            (array_element
              (number))))))
    (viz_clause
      (scale_clause
        (aesthetic_name)
        (scale_to_clause
          (identifier
            (bare_identifier)))))))

================================================================================
Plot with labels
================================================================================

VISUALISE x, y
DRAW point
LABEL title => 'My Plot', x => 'X Axis', y => 'Y Axis'

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))))
    (viz_clause
      (draw_clause
        (geom_type)))
    (viz_clause
      (label_clause
        (label_assignment
          (label_type
            (identifier
              (bare_identifier)))
          (string))
        (label_assignment
          (label_type
            (identifier
              (bare_identifier)))
          (string))
        (label_assignment
          (label_type
            (identifier
              (bare_identifier)))
          (string))))))

================================================================================
PROJECT TO cartesian (default aesthetics)
================================================================================

VISUALISE x, y
DRAW point
PROJECT TO cartesian

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))))
    (viz_clause
      (draw_clause
        (geom_type)))
    (viz_clause
      (project_clause
        (project_type
          (identifier
            (bare_identifier)))))))

================================================================================
PROJECT x, y TO cartesian (explicit aesthetics)
================================================================================

VISUALISE x, y
DRAW point
PROJECT x, y TO cartesian

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))))
    (viz_clause
      (draw_clause
        (geom_type)))
    (viz_clause
      (project_clause
        (project_aesthetics
          (identifier
            (bare_identifier))
          (identifier
            (bare_identifier)))
        (project_type
          (identifier
            (bare_identifier)))))))

================================================================================
PROJECT TO cartesian with SETTING
================================================================================

VISUALISE x, y
DRAW point
PROJECT TO cartesian SETTING ratio => 1

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))))
    (viz_clause
      (draw_clause
        (geom_type)))
    (viz_clause
      (project_clause
        (project_type
          (identifier
            (bare_identifier)))
        (project_properties
          (project_property
            (project_property_name
              (identifier
                (bare_identifier)))
            (number)))))))

================================================================================
PROJECT TO polar (default aesthetics)
================================================================================

VISUALISE theta, radius
DRAW point
PROJECT TO polar

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))))
    (viz_clause
      (draw_clause
        (geom_type)))
    (viz_clause
      (project_clause
        (project_type
          (identifier
            (bare_identifier)))))))

================================================================================
PROJECT TO polar with SETTING start
================================================================================

VISUALISE theta, radius
DRAW bar
PROJECT TO polar SETTING start => 90

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))))
    (viz_clause
      (draw_clause
        (geom_type)))
    (viz_clause
      (project_clause
        (project_type
          (identifier
            (bare_identifier)))
        (project_properties
          (project_property
            (project_property_name
              (identifier
                (bare_identifier)))
            (number)))))))

================================================================================
PROJECT custom aesthetics TO cartesian
================================================================================

VISUALISE a, b
DRAW point
PROJECT a, b TO cartesian

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))))
    (viz_clause
      (draw_clause
        (geom_type)))
    (viz_clause
      (project_clause
        (project_aesthetics
          (identifier
            (bare_identifier))
          (identifier
            (bare_identifier)))
        (project_type
          (identifier
            (bare_identifier)))))))

================================================================================
VISUALISE FROM with CTE
================================================================================

WITH cte AS (SELECT * FROM x)
VISUALISE a AS x, b AS y FROM cte
DRAW point

--------------------------------------------------------------------------------

(query
  (sql_portion
    (sql_statement
      (with_statement
        (cte_definition
          (identifier
            (bare_identifier))
          (select_statement
            (select_body
              (from_clause
                (table_ref
                  table: (qualified_name
                    (identifier
                      (bare_identifier)))))))))))
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (explicit_mapping
            value: (mapping_value
              (column_reference
                (identifier
                  (bare_identifier))))
            name: (aesthetic_name)))
        (mapping_element
          (explicit_mapping
            value: (mapping_value
              (column_reference
                (identifier
                  (bare_identifier))))
            name: (aesthetic_name)))))
    (from_clause
      (table_ref
        table: (qualified_name
          (identifier
            (bare_identifier)))))
    (viz_clause
      (draw_clause
        (geom_type)))))

================================================================================
SELECT followed by VISUALISE
================================================================================

SELECT * FROM x
VISUALISE a AS x, b AS y
DRAW bar

--------------------------------------------------------------------------------

(query
  (sql_portion
    (sql_statement
      (select_statement
        (select_body
          (from_clause
            (table_ref
              table: (qualified_name
                (identifier
                  (bare_identifier)))))))))
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (explicit_mapping
            value: (mapping_value
              (column_reference
                (identifier
                  (bare_identifier))))
            name: (aesthetic_name)))
        (mapping_element
          (explicit_mapping
            value: (mapping_value
              (column_reference
                (identifier
                  (bare_identifier))))
            name: (aesthetic_name)))))
    (viz_clause
      (draw_clause
        (geom_type)))))

================================================================================
Literal value in MAPPING
================================================================================

VISUALISE x, y
DRAW point MAPPING 'blue' AS color

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (global_mapping
      (mapping_list
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))
        (mapping_element
          (implicit_mapping
            (identifier
              (bare_identifier))))))
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_list
            (mapping_element
              (explicit_mapping
                value: (mapping_value
                  (literal_value
                    (string)))
                name: (aesthetic_name)))))))))

================================================================================
VISUALISE FROM without global mapping
================================================================================

VISUALISE FROM sales
DRAW bar MAPPING category AS x, total AS y

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (from_clause
      (table_ref
        table: (qualified_name
          (identifier
            (bare_identifier)))))
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_list
            (mapping_element
              (explicit_mapping
                value: (mapping_value
                  (column_reference
                    (identifier
                      (bare_identifier))))
                name: (aesthetic_name)))
            (mapping_element
              (explicit_mapping
                value: (mapping_value
                  (column_reference
                    (identifier
                      (bare_identifier))))
                name: (aesthetic_name)))))))))

================================================================================
Empty VISUALISE with layer mappings
================================================================================

VISUALISE
DRAW line MAPPING date AS x, revenue AS y
DRAW point MAPPING date AS x, profit AS y

--------------------------------------------------------------------------------

(query
  (visualise_statement
    (visualise_keyword)
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_list
            (mapping_element
              (explicit_mapping
                value: (mapping_value
                  (column_reference
                    (identifier
                      (bare_identifier))))
                name: (aesthetic_name)))
            (mapping_element
              (explicit_mapping
                value: (mapping_value
                  (column_reference
                    (identifier
                      (bare_identifier))))
                name: (aesthetic_name)))))))
    (viz_clause
      (draw_clause
        (geom_type)
        (mapping_clause
          (mapping_list
            (mapping_element
              (explicit_mapping
                value: (mapping_value
                  (column_reference
                    (identifier
                      (bare_identifier))))
                name: (aesthetic_name)))
            (mapping_element
              (explicit_mapping
                value: (mapping_value
                  (column_reference
                    (identifier
                      (bare_identifier))))
                name: (aesthetic_name)))))))))

================================================================================
Layer-specific FROM in MAPPING clause
================================================================================

VISUALISE
DRAW point MAPPING x AS x, y AS y FROM my_cte

--------------------------------------------------------------------------------
